[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/GameUI/planet_01.png" type="Texture" id=1]
[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MathStage.gd" type="Script" id=3]
[ext_resource path="res://images/GameUI/answerBox.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 168
font_data = ExtResource( 2 )

[sub_resource type="ImageTexture" id=2]

[node name="MathStage" type="Node2D"]
script = ExtResource( 3 )
Addend1num = 1

[node name="Background" type="Sprite" parent="."]
position = Vector2( 950, 408 )
scale = Vector2( 0.66963, 0.66963 )
texture = ExtResource( 1 )

[node name="MathQuestion" type="Node2D" parent="."]

[node name="Num1" type="Label" parent="MathQuestion"]
unique_name_in_owner = true
margin_left = 520.0
margin_top = 247.0
margin_right = 560.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="Symbol" type="Label" parent="MathQuestion"]
unique_name_in_owner = true
margin_left = 760.0
margin_top = 247.0
margin_right = 952.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 1 )
text = "+"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Num2" type="Label" parent="MathQuestion"]
unique_name_in_owner = true
margin_left = 989.0
margin_top = 247.0
margin_right = 1181.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="Node2D" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Node2D"]
margin_left = 387.0
margin_top = 591.0
margin_right = 588.0
margin_bottom = 782.0
icon = SubResource( 2 )

[node name="AnswerBox" type="Sprite" parent="Node2D/Button"]
position = Vector2( 99, 94 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Node2D/Button" to="." method="_on_Button_pressed"]
